--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <title>Point Of Sale</title>
   </head>
   <body>
+    <div id="modal"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
