--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     />
     <link rel="stylesheet" href="./index.css" />
     <title>Point Of Sale</title>
+    <link rel="icon" type="image/x-icon" href="https://img.icons8.com/external-smashingstocks-flat-smashing-stocks/50/000000/external-Pos-smooth-conceptual-smashingstocks-flat-smashing-stocks.png">
   </head>
   <body>
     <div id="modal"></div>
